--- a/settings.ini
+++ b/settings.ini
@@ -1,3 +1,19 @@
-DEBUG = True
+[Default]
+# Server host address
+host = localhost
+port = 8080
+headersize = 10
 
-server_script = "server.py"
+[Developer]
+debug = true
+
+[Database]
+# Enable this to utilize database
+use_db = false
+# WARNING! Please set the below value to false before deployment
+auto_login = true
+# Default values for logging into database if auto login is True
+host = localhost
+user = test_user
+password = test_user123
+database = panda
