Include requests for handling HTTP requests.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 autopep8==1.6.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
+idna==3.3
 mysql-connector-python==8.0.27
 protobuf==3.19.1
 pycodestyle==2.8.0
+requests==2.26.0
 toml==0.10.2
+urllib3==1.26.7
