Add logging functionality

--- a/settings.ini
+++ b/settings.ini
@@ -7,7 +7,10 @@ clear_terminal = true
 continous_server = true
 
 [Developer]
-debug = true
+# Debugging features
+log_client_address = false
+log_client_socket = false
+log_client_request = true
 
 [Database]
 # Enable this to utilize database
