Improved the manage utility tool
- The settings.ini config file now supports Bash scripts
- Updated documentation to be more versatile
- Panda-manager now is able to install dependencies
  using the -d option
- Panda-manager is now able to start the server and
  also open a browser of choice and override
  the port to open the server in
- server.py has been modified to allow another port number
  to be used instead of the default one in the config file,
  by passing the port in as the first argument in the CLI

--- a/settings.ini
+++ b/settings.ini
@@ -1,24 +1,24 @@
 [Default]
 # Server host address
-host = localhost
-port = 8080
-headersize = 10
-clear_terminal = true
-continous_server = true
+host=localhost
+port=8080
+headersize=10
+clear_terminal=false
+continous_server=true
 
 [Developer]
 # Debugging features
-log_client_address = false
-log_client_socket = false
-log_client_request = true
+log_client_address=false
+log_client_socket=false
+log_client_request=true
 
 [Database]
 # Enable this to utilize database
-use_db = false
+use_db=false
 # WARNING! Please set the below value to false before deployment
-auto_login = true
+auto_login=true
 # Default values for logging into database if auto login is True
-host = localhost
-user = test_user
-password = test_user123
-database = panda
+host=localhost
+user=test_user
+password=test_user123
+database=panda
