--- a/settings.ini
+++ b/settings.ini
@@ -4,7 +4,7 @@ host=localhost
 port=8080
 headersize=10
 clear_terminal=false
-continous_server=true
+location=src
 
 [Developer]
 # Debugging features
